fix wrong font-family on pages w/ components for skin vector

--- a/modules/ext.bootstrapComponents.vector-fix.css
+++ b/modules/ext.bootstrapComponents.vector-fix.css
@@ -26,6 +26,7 @@ html {
     font-size: 100%;
 }
 
-body {
+body.skin-vector {
     font-size: inherit;
+	font-family: sans-serif !important;
 }
